tests/golden/errors/abs-overflow.rk
import "math"

fn main() {
    n := -9223372036854775807 - 1
    print(math.abs(n))
}
